# ctg-leakage-audit

./: .gitignore  README.md  ctg-build-plan.md  pyproject.toml  requirements.txt
checklist/: ctg_model_info_sheet.md
paper/: outline.md
results/tables/: duplicates.csv  leakage_audit.csv  leakage_audit_raw.csv  wilcoxon.csv
src/data/: load.py
src/evaluation/: metrics.py
src/experiments/: run_duplicates.py  run_leakage_audit.py
src/pipelines/: correct.py  naive.py
tests/: test_leakage.py  test_load.py  test_metrics.py
