[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ctg-leakage-audit"
version = "0.1.0"
description = "Reproducibility and data-leakage audit of fetal-health CTG machine learning"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.14.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "xgboost>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
